initial implements for firebase and netlify

--- a/public/index.html
+++ b/public/index.html
@@ -28,5 +28,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <list-view></list-view>
     <detail-view></detail-view>
   </my-app>
+  <script>
+    if ('serviceWorker' in window.navigator) {
+      window.addEventListener('load', function() {
+        window.navigator.serviceWorker.register('/sw.js');
+      })
+    }
+  </script>
 </body>
 </html>
